# tekton-sidekick

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  database.toml  docker-compose.yml  services.toml
.github/workflows/: CI.yml
.tekton/: ci.yml
src/: main.rs
src/db/: k8s_client.rs  k8s_tekton.rs  mod.rs  pg.rs  redis.rs
src/handlers/: label_selector.rs  mod.rs  run_archive.rs  run_discovery.rs  run_event_stream.rs  runs_by_label.rs  step_log_stream.rs
src/models/: mod.rs  request.rs  response.rs  run_stream.rs  run_summary.rs
src/routes/: mod.rs  run_stream.rs  runs_by_label.rs
src/tests/: mod.rs
