[package]
description = "A service to track presence , allows registration of capabilities"
edition = "2021"
license = "MIT"
name = "tekton-sidekick"
readme = "README.md"
repository = "https://github.com/ginger-society/TektonSidekick"
version = "0.5.0-nightly.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
IAMService = {path = "./IAMService_client"}
anyhow = "1.0.98"
bcrypt = "0.15.1"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "2.1.5", features = ["postgres", "r2d2", "chrono", "serde_json"]}
dotenv = "0.15.0"
futures = "0.3"
ginger-shared-rs = "0.34.0-nightly.0"
jsonwebtoken = "9.3.0"
mongodb = "2.1.0"
okapi = {version = "0.7.0"}
rand = "0.8.5"
rocket = {version = "0.5.0-rc.2", default-features = false, features = [
  "json",
]}
rocket_okapi = {version = "0.8.0-rc.2", features = ["swagger", "secrets"]}
rocket_prometheus = "0.10.0"
schemars = {version = "0.8", features = ["chrono"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.7.0"
uuid = "1.16.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = { version = "0.26.2", features = ["tokio-native-tls", "native-tls"] }
futures-util = "0.3.31"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ---- Added for the Tekton pipeline-run SSE streaming endpoint ----
toml = "0.8"
libc = "0.2.186"
reqwest = { version = "=0.12.20", features = ["json", "stream", "rustls-tls"], default-features = false }
kube = { version = "3.1.0", features = ["runtime", "client", "ws", "rustls-tls"] }
# NOTE: "derive" is intentionally omitted -- this code only uses
# DynamicObject for Tekton's PipelineRun/TaskRun/Pipeline/Task (no
# strongly-typed CRD structs via #[derive(CustomResource)]), so the
# derive macro and its schemars::JsonSchema requirement aren't needed.
# Likewise the "schemars" feature is omitted from k8s-openapi below.
# Together this avoids pulling schemars 1.x into the tree at all, which
# would otherwise sit alongside the schemars 0.8 that rocket_okapi /
# okapi above require (kube 3.x / k8s-openapi 0.27 moved their schemars
# impls to v1). If a future change needs a typed CRD with #[derive(CustomResource)]
# or k8s-openapi's JsonSchema impls, add "derive" back here and "schemars"
# back on k8s-openapi, and bump schemars to "1" as its own dependency.
k8s-openapi = { version = "0.27.0", features = ["latest"] }
serde_yaml = "0.9"
thiserror = "1"
# Api::log_stream() returns a futures::AsyncRead; .compat() bridges it into
# tokio::io::AsyncBufReadExt for lines()-based line splitting (see
# handlers::step_log_stream).
tokio-util = { version = "0.7", features = ["compat"] }
# Async Postgres client for the archive-fallback path (handlers::run_archive)
# -- reads tekton-results' `records` table directly when a PipelineRun is no
# longer live in the cluster. True async, so it never blocks the runtime the
# SSE handler is also using (unlike diesel's sync PgConnection).
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
deadpool-postgres = { version = "0.14" }


[package.metadata]
organization = "ginger-society"